--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "simple-prepaid-card"]
 	path = simple-prepaid-card
-	url = git@github.com:lzakrzewski/simple-prepaid-card.git
+	url = https://github.com/lzakrzewski/simple-prepaid-card.git
